@@ -125,6 +125,14 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+    			<groupId>org.apache.maven.plugins</groupId>
+    			<artifactId>maven-surefire-plugin</artifactId>
+    			<version>3.5.2</version>
+				<configuration>
+        			<argLine>-XX:+EnableDynamicAgentLoading</argLine>
+    			</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
